--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            ":uc:vendor\\:uc:package\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
+            ":uc:vendor\\:uc:package\\": "src/",
             ":uc:vendor\\:uc:package\\Tests\\": "tests/"
         }
     },
